<resources>
    <string name="app_name">My Wallet</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_password">Password</string>
    <string name="text_button">Iniciar Sesión</string>
    <string name="text_welcome_home">Bienvenido</string>
    <string name="text_account_status">0.00</string>
    <string name="label_amount">Cantidad</string>
    <string name="label_note">Nota *</string>
    <string name="label_category">Categoría</string>
    <string name="quantity_text">0.00</string>
    <string name="text_button_charge">Añadir</string>
    <string name="action_text">Añadir Ingreso</string>
    <string name="placeholder_username">Nombre</string>
    <string name="description">App Image</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_user_or_email">Username or email</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Cerrar</string>
    <string name="user">Usuario</string>
    <string name="email">Correo electrónico</string>

    <string name="drawer.home">Home</string>

    <string name="drawer.account">Cuenta</string>
    <string name="drawer.accounts">Mis cuentas</string>
    <string name="drawer.add_account">Agregar una cuenta</string>

    <string name="drawer.extra">Adicional</string>
    <string name="drawer.about">Acerca de</string>
    <string name="drawer.privacy">Privacidad</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresar">Ingresar</string>
    <string name="aceptar">Aceptar</string>
    <string name="register">Registrarme</string>
    <string name="login">Iniciar Sesion</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="pesos">$</string>
    <string name="cantidad">Cantidad</string>
    <string name="_0_00">0.00</string>
    <string name="nota">Nota</string>
    <string name="nueva_cuenta">Nueva cuenta</string>
    <string name="nombre_de_la_cuenta">Nombre de tu nueva cuenta</string>
    <string name="monto_inicial">Monto inicial de esta cuenta (opcional)</string>
    <string name="anadir_ingreso">Añadir ingreso</string>
    <string name="anadir_egreso">Añadir egreso</string>
    <string name="cuenta">Cuenta</string>
    <string name="icono_de_la_cuenta">Icono de la cuenta</string>
    <string name="detalles">Detalles</string>
    <string name="total_en_cuenta">Total en \ncuenta</string>
    <string name="imagen_de_usuario">Imagen de usuario</string>
    <string name="_1000">$1000</string>
    <string name="icono_de_cuenta">Icono de cuenta</string>
    <string name="charge">Cargo</string>
    <string name="category">category</string>
    <string name="note">Note</string>
    <string name="_00_00_00">00/00/00</string>
    <string name="about_of">¡Hola!\nEsta aplicación te permitirá:\nAdministrar tu dinero, \nDar seguimiento a tus finanzas, \nPlanear para el futuro."<br /><br /> \n\nTambién podrás controlar: <br /> \n*Cuentas <br /> \n*Ingresos  <br /> \n*Egresos</string>
    <string name="aviso_privacidad">Aviso de Privacidad</string>
    <string name="exclusividad">Exclusivo para el uso de los programadores &amp; contribuidores:</string>
    <string name="genial">¡Genial!</string>
    <string name="home_prompt">Estos son tus ahorros totales.</string>

    <!--    botones-->
    <string name="account">Cuentas</string>
    <string name="history">Historial</string>

    <!--    Goal Fragment Strings -->
    <string name="title_goal">Agrega una meta</string>
    <string name="description_goal">Una meta te ayudará a mantener un saldo positivo. Te indicaremos cuando alcances la meta </string>
    <string name="add_goal">Agregar</string>
    <string name="back_goal">Regresar</string>
    <string name="input_goal">Ingresa tu meta</string>
    <string name="goal">Mi meta</string>
    <string name="drawer.add_goal">Agrega una meta</string>
    <string name="cambiar_imagen">cambiar</string>
    <string name="drawer.exit">Salir</string>

    <!--texto de notificaciones -->
    <string name="nombre_canal">Anuncios sobre la app</string>
    <string name="nombrenotificacion">My Walet se está ejecutando</string>
    <string name="notificacion1">¡My Wallet es la mejor APP para tus finanzas!</string>
    <string name="notificacion2">¡Recuerda que puedes modificar o agregar METAS para seguir teniendo saldo positivo! Da clic en esta NOTIFICACIÓN para ir al modulo y agregar una meta. </string>
    <string name="descripcion">Descripcion</string>
    <string name="profile_pic">profile pic</string>
    <string name="mxn">MXN</string>
    <!--  SDK de conekta  -->
    <string name="XXXX">XXXX-XXXX-XXXX-XXXX</string>
    <string name="cardNumber">Num. tarjeta:</string>
    <string name="cardName">Nombre del titular de la tarjeta:</string>
    <string name="expire">Expira:</string>
    <string name="cardCvc">Código de seguridad:</string>
    <string name="mm">MM</string>
    <string name="yyyy">AAAA</string>
    <string name="name">Nombre</string>
    <string name="cvc">CVC</string>
    <string name="outputData">Datos de registro:</string>
    <string name="outputTokenData"> </string>
    <string name="outputUUIDData"> </string>
    <string name="needInternetConnection">Necesitas conexión a internet</string>
    <string name="cardDataIncomplete">Ingresa todos los datos de tu tarjeta</string>
    <string name="theTokenIdLabel">Token:</string>
    <string name="errorLabel">Error:</string>
    <string name="uuidDeviceLabel">UUID:</string>

    <!--premium -->
    <string name="descPremium">Al pagar tu versión premium de $100 X mes:</string>
    <string name="Oferta1">Recibirás 20 hrs. de asesoría financiera virtual</string>
    <string name="Oferta2">Tendrás contenido financiero exclusivo de nuestros expertos</string>
    <string name="indicaciones3"> Agrega los datos de tu tarjeta de crédito o débito [núm. de prueba: 4242424242424242]</string>
    <string name="indicacionesFin"> Una vez que se generó tu token, la transacción se confirmará dentro de las siguientes 24hrs</string>

</resources>