<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <TextView
        android:id="@+id/textView_main_appName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:paddingHorizontal="16dp"
        android:fontFamily="casual"
        android:textAlignment="center"
        android:textColor="@color/secondaryTextColor"
        android:textStyle="bold|italic"
        android:text="@string/app_name"
        android:textSize="48sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_register_appIcon"
        android:layout_width="176dp"
        android:layout_height="176dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/description"
        android:rotation="15"
        android:src="@drawable/walleticon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_main_appName" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_main_signUp"
        style="@style/Wallet.Button.Welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="152dp"
        android:text="@string/registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_register_appIcon" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_main_signIn"
        style="@style/Wallet.Button.Welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/ingresar"
        app:layout_constraintEnd_toEndOf="@id/button_main_signUp"
        app:layout_constraintStart_toStartOf="@id/button_main_signUp"
        app:layout_constraintTop_toBottomOf="@+id/button_main_signUp" />


</androidx.constraintlayout.widget.ConstraintLayout>