<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/detailView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="16dp">

    <TextView
        android:id="@+id/textView_detail_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:fontFamily="casual"
        android:text="@string/detalles"
        android:textSize="24sp"
        android:textColor="@color/primaryTextColor"
        android:textAlignment="center"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_detail_accountIcon"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/money"
        app:layout_constraintTop_toBottomOf="@id/textView_detail_header"
        app:layout_constraintStart_toStartOf="@id/detail_guideline3"
        app:layout_constraintEnd_toEndOf="@id/detail_guideline4"
        android:contentDescription="@string/icono_de_cuenta" />

    <TextView
        android:id="@+id/textView_detail_accountName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/cuenta"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/detail_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView_detail_header" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:text="@string/total_en_cuenta"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/detail_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView_detail_accountName" />

    <TextView
        android:id="@+id/textView_detail_totalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="casual"
        android:text="@string/_1000"
        android:textColor="#000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/detail_guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.30" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.70" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/detail_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.45" />


</androidx.constraintlayout.widget.ConstraintLayout>