<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingStart="28dp"
    android:paddingTop="56dp"
    android:paddingEnd="28dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_drawerMenu_profilePicture"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:contentDescription="@string/imagen_de_usuario"
            android:src="@drawable/default_user"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView_drawerMenu_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView_drawerMenu_profilePicture"
            app:srcCompat="@drawable/ic_camera" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/textView_drawerMenu_userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/user"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView_drawerMenu_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="14sp" />
</LinearLayout>
